# django_rest_k8s_app

./: .gitignore  Makefile  Readme.md  docker-compose.yml
app/: .dockerignore  Dockerfile  Makefile  env.example.txt  manage.py  migrate.sh  pyproject.toml  setup.cfg
app/api/: urls.py  views.py
app/django_k8s/: asgi.py  settings.py  urls.py
app/users/: models.py
app/users/migrations/: 0001_initial.py  0002_pet_user_delete_users.py
